--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.12.1",
+    "chart.js": "^4.4.9",
     "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
